8144091: CompilerControl: directive file doesn't override inlining rules

Fix correct overrides

Reviewed-by: roland